@@ -1115,7 +1115,7 @@ sub GenerateParametersCheckExpression
         # these are acceptable values for a DOMString argument (any Object can
         # be converted to a string via .toString).
         push(@andExpression, "(${value}.isNull() || ${value}.isUndefined() || ${value}.isString() || ${value}.isObject())") if $codeGenerator->IsStringType($type);
-        push(@andExpression, "(${value}.isNull() || asObject(${value})->inherits(JS${type}::s_info)") unless IsNativeType($type);
+        push(@andExpression, "(${value}.isNull() || asObject(${value})->inherits(&JS${type}::s_info))") unless IsNativeType($type);
 
         $parameterIndex++;
     }
